# icebreaker-ai

./: README.md  notes.md  pyproject.toml
data/: sample_ip_email_gen_mle.json  sample_ip_email_gen_swe.json
db/: resume_data.db
src/: api.py  config.py  main.py  models.py  utils.py
src/tasks/: company_fetcher.py  generate_emails.py  job_posting_parser.py  job_titles_recommendation.py  jobs_recommendation.py  relevant_jobs_predictor.py  resume_parser.py
