[tool.poetry]
name = "icebreaker-ai"
version = "0.1.0"
description = ""
authors = ["Abhishek Ranjan <aviranjan444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.12.27"
llama-cloud-services = "^0.6.9"
langchain = "^0.3.22"
google-genai = {extras = ["aiohttp"], version = "^1.26.0"}
langchain-openai = "^0.3.11"
langchain-google-vertexai = "^2.0.18"
rich = "^14.0.0"
aiosqlite = "^0.21.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.29.0"
langgraph = "^0.5.3"
pydantic = "^2.11.7"
aiohttp = "^3.12.14"
asyncio = "^3.4.3"
langchain-anthropic = "^0.3.17"
langchain-google-genai = "^2.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
